--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,16 @@
-theme: jekyll-theme-cayman
+name: "Final Project"
+navbar: 
+  title: "Do people who made more web visit purchase more compared with people who made less web visit?"
+  left: 
+    - text: "Home"
+      href: index.html
+    - text: "Analysis"
+      href: analysis.html
+    - text: "Code"
+      href: code.html
+  right: 
+    - icon: fa-github fa-lg
+      href: https://github.com/daimm18/STA-679-Final-Project
+output:
+  html_document:
+    theme: jekyll-theme-cayman
